--- a/cv.html
+++ b/cv.html
@@ -291,35 +291,6 @@ title: CV
   </div> 
 </span>
 
-
-  <div class="line-container">
-  <h2>Positions</h2> 
-  <span class="line"></span>
-</div>
-
-{% for pos in site.data.positions %}
-<h3>{{ pos.title }}{% if pos.company %} at {{pos.company}}{% endif %}</h3>
-<article>
-  <div class="date-container">
-    <span class="date">{{ pos.years }}</span>
-    <span style="flex: 1">{{ pos.description | markdownify }}</span>
-    <span class="right">{{ pos.location }}</span>
-  </div>
-  <p>
-    {% if pos.mentors %}
-      Mentor{% if pos.mentors.size > 1 %}s{% endif %}: {% for mentor in pos.mentors %}
-        {% include person person=mentor %}{% unless forloop.last %}, {% endunless %}
-      {% endfor %}<br/>
-    {% endif %}
-    {% if pos.skills %}
-    <small class="muted">[{% for skill in pos.skills %}{{ skill }}{% unless forloop.last %}, {% endunless %}{% endfor %}]</small>
-    {% endif %}
-  </p>
-</article>
-{% endfor %}
-
-
-
 <div class="line-container">
   <h2>Education</h2> 
   <span class="line"></span>
@@ -418,6 +389,32 @@ title: CV
 </article>
 {% endfor %}
 
+<div class="line-container">
+  <h2>Research Experience</h2> 
+  <span class="line"></span>
+</div>
+
+{% for pos in site.data.positions %}
+<h3>{{ pos.title }}{% if pos.company %} at {{pos.company}}{% endif %}</h3>
+<article>
+  <div class="date-container">
+    <span class="date">{{ pos.years }}</span>
+    <span style="flex: 1">{{ pos.description | markdownify }}</span>
+    <span class="right">{{ pos.location }}</span>
+  </div>
+  <p>
+    {% if pos.mentors %}
+      Mentor{% if pos.mentors.size > 1 %}s{% endif %}: {% for mentor in pos.mentors %}
+        {% include person person=mentor %}{% unless forloop.last %}, {% endunless %}
+      {% endfor %}<br/>
+    {% endif %}
+    {% if pos.skills %}
+    <small class="muted">[{% for skill in pos.skills %}{{ skill }}{% unless forloop.last %}, {% endunless %}{% endfor %}]</small>
+    {% endif %}
+  </p>
+</article>
+{% endfor %}
+
 
 <div class="line-container">
   <h2>Teaching Experience</h2>
@@ -426,12 +423,12 @@ title: CV
 
 {% assign coursetitles = site.data.teaching | group_by: "title" %} 
 {% for title in coursetitles %}
+{% assign recentcourse = title.items[-1] %}
 <article>
-  <h3>{{ title.name }}</h3>
+  <h3>{{ title.name }}</h3> 
   <div class="date-container">
     <span class="date"> {% for class in title.items %} {{ class.year }} {% endfor %} </span>
-    {% assign recentcourse = title.items[-1] %}
-    <span style="flex: 1"> {{ recentcourse.roledescription | markdownify }} </span>
+    <span style="flex: 1"> {{ recentcourse.role }}. {{ recentcourse.roledescription}} </span>
     <span class="right">{{ recentcourse.location }}</span>
   </div>
   <br/>
