Revert "add aria hidden"
This reverts commit 0de214d44d16cb366802aba173ce03a4d78b35fd.

--- a/cv.html
+++ b/cv.html
@@ -13,9 +13,9 @@ title: CV
   <span class="header-columns">
     <div> PhD Student at University of Wisconsin-Madison </div> 
     <div>
-        <a href="mailto:jcobb2@math.wisc.edu" style="margin-left:0.6em"><i class="fas fa-envelope" aria-hidden="true"></i> jcobb2@math.wisc.edu</a> 
-        <a href="{{ absolute_url }}/"><i class="fas fa-home" style="margin-left:0.6em" aria-hidden="true"></i> https://www.math.wisc.edu/~jcobb2</a>
-        <a href="https://github.com/johndcobb"><i class="fab fa-github" style="margin-left: 0.6em" aria-hidden="true"></i> johndcobb</a>
+        <a href="mailto:jcobb2@math.wisc.edu" style="margin-left:0.6em"><i class="fas fa-envelope"></i> jcobb2@math.wisc.edu</a> 
+        <a href="{{ absolute_url }}/"><i class="fas fa-home" style="margin-left:0.6em"></i> https://www.math.wisc.edu/~jcobb2</a>
+        <a href="https://github.com/johndcobb"><i class="fab fa-github" style="margin-left: 0.6em"></i> johndcobb</a>
     </div> 
   </span>
 
