--- a/cv.html
+++ b/cv.html
@@ -211,6 +211,24 @@ title: CV
   {% endfor %}
 
   <div class="line-container">
+    <h2>Grants</h2>
+    <span class="line"></span>
+  </div>
+
+  {% for grant in site.data.grants %}
+  {% if grant.hide==nil %}
+  <h3>{{ grant.name }}</h3>
+  <article>
+    <div class="date-container">
+      <span class="date">{{grant.years | replace: "-", "–" }}</span>
+      <span style="flex: 1">{{ grant.description | markdownify }}</span>
+    </div>
+  </article>
+  {% endif %}
+  {% endfor %}
+
+
+  <div class="line-container">
     <h2>Programming</h2>
     <span class="line"></span>
   </div>
