--- a/cv.html
+++ b/cv.html
@@ -193,7 +193,7 @@ title: CV
   {% endfor %}
 
   <div class="line-container">
-    <h2>Service & Organization</h2>
+    <h2>Service & Organizing</h2>
     <span class="line"></span>
   </div>
 
