--- a/cv.html
+++ b/cv.html
@@ -138,7 +138,7 @@ title: CV
     <span class="line"></span>
   </div>
 
-  {% assign types = "Published|Preprint|In Progress" | split: "|" %}
+  {% assign types = "Journal|Preprint" | split: "|" %}
   {% for type in types %}
     {% assign counter = 1 %}
     {% for pub in site.data.publications %}
