--- a/cv.html
+++ b/cv.html
@@ -296,7 +296,7 @@ title: CV
 
   {% for service in site.data.service %}
   {% if service.hide==nil %}
-  <h3>{{ service.title }} at {{ service.at }}</h3>
+  <h3>{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
     <div class="date-container">
       <span class="date">{{service.years | replace: "-", "–" }}</span>
       <span style="flex: 1">{{ service.description }}</span>
@@ -305,6 +305,16 @@ title: CV
   <br>
   {% endif %}
   {% endfor %}
+
+  <div class="line-container">
+    <h2>Referee Work</h2>
+    <span class="line"></span>
+  </div>
+
+  <div>
+  {% assign counter = 1 %}
+  {% for referee in site.data.referee %}{% if counter != 1 %}, {% endif %}{{ referee.journal }}{% assign counter = counter | plus: 1 %}{% endfor %}
+  </div>
 
   <div class="line-container">
     <h2>Work Experience</h2> 
