update email address

--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,7 @@ title: CV
   <span class="header-columns">
     <div hidden> PhD Student at University of Wisconsin-Madison </div> 
     <div>
-        <a href="mailto:jcobb2@math.wisc.edu" style="margin-left:0.6em"><i class="fas fa-envelope" aria-hidden="true"></i> jcobb2@math.wisc.edu</a> 
+        <a href="mailto:jdcobb3@gmail.com" style="margin-left:0.6em"><i class="fas fa-envelope" aria-hidden="true"></i> jdcobb3@gmail.com</a> 
         <a href="{{ absolute_url }}/"><i class="fas fa-home" style="margin-left:0.6em" aria-hidden="true"></i>https://github.com/johndcobb</a>
         <a href="https://github.com/johndcobb"><i class="fab fa-github" style="margin-left: 0.6em" aria-hidden="true"></i> johndcobb</a>
     </div> 
