--- a/cv.html
+++ b/cv.html
@@ -235,19 +235,21 @@ title: CV
 
 
   <div class="line-container">
-    <h2>Teaching Experience</h2>
+    <h2>Teaching</h2>
     <span class="line"></span>
   </div>
 
   {% assign coursetitles = site.data.teaching | group_by: "title" %} 
   {% for title in coursetitles %}
   {% assign recentcourse = title.items[-1] %}
-    <h3>{{ title.name }}</h3> 
+  <div class="no-break">
+    <h3 style="margin-left: 90px">{{ title.name }}</h3> 
     <div class="date-container">
       <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }} <br> {% endfor %} </span>
       <span style="flex: 1"> {{ recentcourse.role }}. {{ recentcourse.roledescription}} </span>
       <span class="right">{{ recentcourse.location }}</span>
     </div>
+  </div>
     <br/>
   {% endfor %}
 
@@ -302,12 +304,14 @@ title: CV
 
   {% for service in site.data.service %}
   {% if service.hide==nil %}
-  <h3>{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
+  <div class="no-break">
+  <h3 style="margin-left: 90px">{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
     <div class="date-container">
       <span class="date">{{service.years | replace: "-", "–" }}</span>
       <span style="flex: 1">{{ service.description }}</span>
       <span class="right">{{ service.location }}</span>
     </div>
+  </div>
   <br>
   {% endif %}
   {% endfor %}
@@ -328,13 +332,14 @@ title: CV
   </div>
 
   {% for pos in site.data.positions %}
-  <h3>{{ pos.title }}{% if pos.company %} at {{pos.company}}{% endif %}</h3>
+  <div class="no-break">
+  <h3 style="margin-left: 90px">{{ pos.title }}{% if pos.company %} at {{pos.company}}{% endif %}</h3>
     <div class="date-container">
       <span class="date">{{ pos.years | replace: "-", "–"  }}</span>
       <span style="flex: 1">{{ pos.description | markdownify }}</span>
       <span class="right">{{ pos.location }}</span>
     </div>
-    <p>
+    <p style="margin-left: 90px">
       {% if pos.mentors %}
         Mentor{% if pos.mentors.size > 1 %}s{% endif %}: {% for mentor in pos.mentors %}
           {% include person person=mentor %}{% unless forloop.last %}, {% endunless %}
@@ -344,6 +349,7 @@ title: CV
       <small class="muted">[{% for skill in pos.skills %}{{ skill }}{% unless forloop.last %}, {% endunless %}{% endfor %}]</small>
       {% endif %}
     </p>
+  </div>
   {% endfor %}
 
   <div class="line-container">
