--- a/cv.html
+++ b/cv.html
@@ -18,8 +18,8 @@ title: CV
   <span class="header-columns">
     <div hidden> PhD Student at University of Wisconsin-Madison </div> 
     <div>
-        <a href="mailto:jdcobb3@gmail.com" style="margin-left:0.6em"><i class="fas fa-envelope" aria-hidden="true"></i> jdcobb3@gmail.com</a> 
-        <a href="{{ absolute_url }}/"><i class="fas fa-home" style="margin-left:0.6em" aria-hidden="true"></i>https://github.com/johndcobb</a>
+        <a href="mailto:jdcobb3@gmail.com" style="margin-left:0.6em"><i class="fa-solid fa-envelope" aria-hidden="true"></i> jdcobb3@gmail.com</a> 
+        <a href="{{ absolute_url }}/"><i class="fa-solid fa-globe" style="margin-left:0.6em" aria-hidden="true"></i> https://github.com/johndcobb</a>
         <a href="https://github.com/johndcobb"><i class="fab fa-github" style="margin-left: 0.6em" aria-hidden="true"></i> johndcobb</a>
     </div> 
   </span>
