just leave it at applications

--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@ title: CV
     </div> 
   </span>
   <span class="header-columns">
-    <b>Research Interests:</b> Algebraic geometry, commutative algebra, and their applications to data science.
+    <b>Research Interests:</b> Algebraic geometry, commutative algebra, and their applications.
   </span>
 
   <div class="line-container">
