small spacing change to make code cleaner
also, this triggers a rebuild which is needed

--- a/cv.html
+++ b/cv.html
@@ -371,12 +371,10 @@ title: CV
       </div>
     <div class="extra-links">
       {% if project.code %}
-        <a href="{{ project.code }}">
-          <i class="fas fa-link" aria-hidden="true"></i> Code
-        </a>
+        <a href="{{ project.code }}"><i class="fas fa-link" aria-hidden="true"></i> Code</a>
       {% endif %}
       {% if project.paper %}
-      <a href="{{ project.paper }}"><i class="fas fa-newspaper" aria-hidden="true"></i> Paper</a>
+        <a href="{{ project.paper }}"><i class="fas fa-newspaper" aria-hidden="true"></i> Paper</a>
       {% endif %}
     </div> <br/>
   {% endfor %}
