add links to grants

--- a/cv.html
+++ b/cv.html
@@ -81,7 +81,7 @@ title: CV
     <div class="extra-links">
       {% if award.link %}
         <a href="{{ award.link }}">
-          <i class="fas fa-link" aria-hidden="true"></i> Project
+          <i class="fas fa-link" aria-hidden="true"></i> Link
         </a>
       {% endif %}
       {% if award.article %}
